<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor2"
    tools:context=".MainActivity">

    <!-- App Icon -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="87dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/reaper" />

    <!-- App Title -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/sneakreaper"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <!-- URL Input -->
    <EditText
        android:id="@+id/urlEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/url"
        android:inputType="textUri"
        android:textColor="@color/white"
        android:paddingVertical="18dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/https_reaperscans_com_series"
        app:layout_constraintHorizontal_bias="0.5"
        android:ems="18" />

    <!-- Download Button -->

    <!-- ProgressBar -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/downloadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_bg"
        android:paddingHorizontal="20dp"
        android:paddingVertical="18dp"
        android:text="@string/download"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urlEdit" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/downloadBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <!-- Progress Text -->
    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_0"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />


    <!-- View Downloads Button -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/viewDownloadsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_bg"
        android:paddingHorizontal="18sp"
        android:paddingVertical="18sp"
        android:text="@string/view_downloads"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/downloadBtn"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/downloadBtn"
        app:layout_constraintTop_toBottomOf="@+id/downloadBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>
